--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - checkout
       - run:
           name: "conoha deploy"
-          command: ssh -A -o StrictHostKeyChecking=no /home/kusanagi/html/DocumentRoot/wp-content/themes/forestone_corp/config/deploy.sh
+          command: ssh -A -o root@133.130.101.97 StrictHostKeyChecking=no IdentitiesOnly=yes AddKeysToAgent=yes UseKeychain=yes TCPKeepAlive=yes Compression=yes GSSAPIAuthentication=no UseRoaming=no
 
 workflows:
   version: 2
