--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "jquery.hoverformenu": "^1.0.0",
     "material-design-lite": "^1.3.0",
     "popper.js": "^1.11.0",
+    "remodal": "^1.1.1",
     "slick-carousel": "^1.8.1",
     "superfish": "^1.7.9"
   }
